--- a/i/in/inn/innovationads.com.html
+++ b/i/in/inn/innovationads.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the innovationads.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603114919id_/http%3A//innovationads.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the innovationads.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205092002id_/http%3A//www.innovationads.com/privacypolicy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>About</title>
@@ -11,7 +11,7 @@
 <script language="JavaScript" src="scripts/validator.js" type="text/JavaScript"></script>
 <meta name="description" content="Headquartered in New York City, Innovation Ads, Inc. specializes in both branding and direct response opportunities for those advertisers who dare to be as unique as its mediums.">
 </head> 
-<body bgcolor="#FFFFFF" background="images/site/bg.gif" link="#003399" vlink="#003399" alink="#003399" leftmargin="0" topmargin="20" marginwidth="0" marginheight="0" onload="MM_preloadImages('images/links/L1a.gif','images/links/A1a.gif','images/links/L2a.gif','images/links/A2a.gif','images/links/L3a.gif','images/links/A3a.gif','images/links/L4a.gif','images/links/A4a.gif','images/links/L5a.gif','images/links/A5a.gif','images/links/L6a.gif','images/links/A6a.gif','images/links/L7a.gif')">
+<body bgcolor="#FFFFFF" background="images/site/bg.gif" link="#003399" vlink="#003399" alink="#003399" leftmargin="0" topmargin="20" marginwidth="0" marginheight="0" onload="MM_preloadImages('images/links/L1a.gif','images/links/A1a.gif','images/links/L2a.gif','images/links/A2a.gif','images/links/L3a.gif','images/links/A3a.gif','images/links/L4a.gif','images/links/A4a.gif','images/links/L5a.gif','images/links/A5a.gif','images/links/L6a.gif','images/links/A6a.gif','images/links/L8a.gif','images/links/A8a.gif','images/links/L7a.gif','images/links/A7a.gif')">
 <table width="772" border="0" align="center" cellpadding="0" cellspacing="1" bgcolor="#000000">
   <tbody><tr>
     <td bgcolor="#FFFFFF"><table width="770" border="0" cellspacing="0" cellpadding="0">
@@ -34,36 +34,40 @@
         </tr>
         <tr> 
           <td><table width="770" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr> 
-                <td><img src="images/site/pic_05.gif" width="119" height="22"></td>
-                <td><a href="index.htm"><img src="images/links/L1.gif" alt="Home" name="Image1" width="71" height="22" border="0" id="Image1" onmouseover="MM_swapImage('Image1','','images/links/L1a.gif','h','','images/links/A1a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
-                <td><a href="online.htm"><img src="images/links/L2.gif" alt="Online Advertising" name="Image2" width="133" height="22" border="0" id="Image2" onmouseover="MM_swapImage('Image2','','images/links/L2a.gif','o','','images/links/A2a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
-                <td><a href="intaxi.htm"><img src="images/links/L3.gif" alt="Intaxi Advertising" name="Image3" width="128" height="22" border="0" id="Image3" onmouseover="MM_swapImage('Image3','','images/links/L3a.gif','i','','images/links/A3a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
-                <td><a href="design.htm"><img src="images/links/L4.gif" alt="Design" name="Image4" width="64" height="22" border="0" id="Image4" onmouseover="MM_swapImage('Image4','','images/links/L4a.gif','d','','images/links/A4a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
-                <td><a href="marketing.htm"><img src="images/links/L5.gif" alt="Marketing Strategy" name="Image5" width="135" height="22" border="0" id="Image5" onmouseover="MM_swapImage('Image5','','images/links/L5a.gif','m','','images/links/A5a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
-                <td><a href="about.htm"><img src="images/links/L6.gif" alt="About" name="Image6" width="61" height="22" border="0" id="Image6" onmouseover="MM_swapImage('Image6','','images/links/L6a.gif','a','','images/links/A6a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
-                <td><a href="http://innovationads.directtrack.com/" target="_blank" onmouseover="MM_swapImage('Image36','','images/links/L7a.gif',1)" onmouseout="MM_swapImgRestore()"><img src="images/links/L7.gif" alt="Login" name="Image36" width="59" height="22" border="0"></a></td>
-              </tr>
-            </tbody></table></td>
+            <tbody><tr>
+              <td><img src="images/site/pic_05.gif" width="119" height="22"></td>
+              <td><a href="index.htm"><img src="images/links/L1.gif" alt="Home" name="Image1" width="73" height="22" border="0" id="Image1" onmouseover="MM_swapImage('Image1','','images/links/L1a.gif','h','','images/links/A1a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+              <td><a href="online.htm"><img src="images/links/L2.gif" alt="Online Advertising" name="Image2" width="133" height="22" border="0" id="Image2" onmouseover="MM_swapImage('Image2','','images/links/L2a.gif','o','','images/links/A2a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+              <td><a href="design.htm"><img src="images/links/L3.gif" alt="Design" name="Image3" width="68" height="22" border="0" id="Image3" onmouseover="MM_swapImage('Image3','','images/links/L3a.gif','d','','images/links/A3a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+              <td><a href="marketing.htm"><img src="images/links/L4.gif" alt="Marketing Strategy" name="Image4" width="133" height="22" border="0" id="Image4" onmouseover="MM_swapImage('Image4','','images/links/L4a.gif','m','','images/links/A4a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+              <td><a href="about.htm"><img src="images/links/L5.gif" alt="About" name="Image5" width="62" height="22" border="0" id="Image5" onmouseover="MM_swapImage('Image5','','images/links/L5a.gif','a','','images/links/A5a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+              <td><a href="news.htm"><img src="images/links/L6.gif" alt="News" name="Image6" width="58" height="22" border="0" id="Image6" onmouseover="MM_swapImage('Image6','','images/links/L6a.gif','n','','images/links/A6a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+              <td><a href="jobs.htm"><img src="images/links/L7.gif" alt="Jobs" name="Image7" width="55" height="22" border="0" id="Image7" onmouseover="MM_swapImage('Image7','','images/links/L7a.gif','j','','images/links/A7a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+              <td><a href="http://innovationads.directtrack.com/" target="_blank"><img src="images/links/L8.gif" alt="Login" name="Image8" width="69" height="22" border="0" id="Image8" onmouseover="MM_swapImage('Image8','','images/links/L8a.gif','l','','images/links/A8a.gif',1)" onmouseout="MM_swapImgRestore()"></a></td>
+            </tr>
+          </tbody></table></td>
         </tr>
         <tr> 
           <td><img src="images/site/pic_12.gif" width="770" height="9"></td>
         </tr>
         <tr> 
           <td><table width="770" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr> 
-                <td><img src="images/site/pic_13.gif" width="9" height="21"></td>
-                <td><img src="images/links/A1.gif" name="h" width="24" height="21" id="h"></td>
-                <td><img src="images/links/A2.gif" name="o" width="28" height="21" id="o"></td>
-                <td><img src="images/links/A3.gif" name="i" width="28" height="21" id="i"></td>
-                <td><img src="images/links/A4.gif" name="d" width="28" height="21" id="d"></td>
-                <td><img src="images/links/A5.gif" name="m" width="28" height="21" id="m"></td>
-                <td><img src="images/links/A6.gif" name="a" width="24" height="21" id="a"></td>
-                <td width="601" valign="middle" background="images/site/pic_20.gif"><div align="right">&nbsp;&nbsp;<img src="images/bullet.gif" width="6" height="6">&nbsp;<a href="index.htm">home</a> 
-                    <span class="text2">»</span> <a href="privacypolicy.htm">privacy 
-                    policy </a><span class="text2"><a href="webdesign.htm"></a>&nbsp;&nbsp;</span></div></td>
-              </tr>
-            </tbody></table></td>
+            <tbody><tr>
+              <td width="9"><img src="images/site/pic_13.gif" width="9" height="21"></td>
+              <td width="24"><img src="images/links/A1.gif" name="h" width="24" height="21" id="h"></td>
+              <td width="28"><img src="images/links/A2.gif" name="o" width="28" height="21" id="o"></td>
+              <td width="28"><img src="images/links/A3.gif" name="d" width="28" height="21" id="d"></td>
+              <td width="28"><img src="images/links/A4.gif" name="m" width="28" height="21" id="m"></td>
+              <td width="28"><img src="images/links/A5.gif" name="a" width="28" height="21" id="a"></td>
+              <td width="12"><img src="images/links/A6.gif" name="n" width="28" height="21" id="n"></td>
+              <td width="24"><img src="images/links/A7.gif" name="j" width="28" height="21" id="j"></td>
+              <td width="28" valign="middle" background="images/site/pic_20.gif">
+                <div align="left"></div>
+                <div align="left"><img src="images/links/A8.gif" name="l" width="28" height="21" id="l"></div></td>
+              <td valign="middle" background="images/site/pic_20.gif"><div align="right">&nbsp;<img src="images/bullet.gif" width="6" height="6">&nbsp;<a href="index.htm">home</a> <span class="text2">»</span> <a href="privacypolicy.htm">privacy policy</a>&nbsp;&nbsp;</div></td>
+            </tr>
+          </tbody></table>
+          </td>
         </tr>
         <tr> 
           <td><img src="images/site/pic_21.gif" width="770" height="3"></td>
@@ -241,8 +245,8 @@
                   </tbody></table></td>
               </tr>
             </tbody></table>
-            <p align="center"><span class="text2"><span class="naslov"><a href="index.htm">home</a> | <a href="online.htm">online advertising</a> | <a href="intaxi.htm">intaxi advertising</a> | <a href="design.htm">design</a> | <a href="marketing.htm">marketing strategy</a> | <a href="about.htm">about</a> | <a href="privacypolicy.htm">privacy policy </a>|<a href="privacypolicy.htm"> </a> <a href="http://www.innovationads.com/portfolio" target="_blank">portfolio</a> | <a href="privacypolicy.htm"></a><a href="privacypolicy.htm"></a> <a href="javascript:popup('disclaimer.htm',490,130,'popup');">disclaimer</a><a href="privacypolicy.htm"><br>
-              </a>» <a href="sitemap.htm">sitemap</a> « <a href="glossaryofterms.htm">» glossary of terms</a> « <br>
+            <p align="center"><span class="text2"><span class="naslov"><a href="index.htm">home</a> | <a href="online.htm">online advertising</a> | <a href="design.htm">design</a> | <a href="marketing.htm">marketing strategy</a> | <a href="about.htm">about</a> |<a href="news.htm"> news </a>|<a href="news.htm"></a><a href="http://innovationads.directtrack.com/" target="_blank"> jobs </a> |<a href="http://innovationads.directtrack.com/" target="_blank"> login </a> | <a href="privacypolicy.htm">privacy policy </a>|<a href="privacypolicy.htm"> </a> <a href="http://www.innovationads.com/portfolio" target="_blank">portfolio</a> | <a href="privacypolicy.htm"></a><a href="privacypolicy.htm"></a> <a href="javascript:popup('disclaimer.htm',490,130,'popup');">disclaimer</a><a href="privacypolicy.htm"><br>
+            </a>» <a href="sitemap.htm">sitemap</a> « »<a href="glossaryofterms.htm"> glossary of terms</a> «<br>
             </span><span class="text1">Innovation Ads, Inc. 2003, All rights reserved </span></span> </p></td>
         </tr>
         <tr> 
@@ -251,6 +255,21 @@
       </tbody></table></td>
   </tr>
 </tbody></table>
+<!-- L10 Hit Counter page code -->
+<noscript><tr><td><a href="http://www.innovationads.com/L10Apps/L10HC_Reporter.html"><img border=0 hspace=0 vspace=0 width=0 height=0 src="http://www.innovationads.com/L10Apps/L10HC_Counter.php?acct=." alt="L10 Web Stats Reporter 3.15"></a></td></noscript><table border="0" cellspacing="0" cellpadding="0" align="center">
+<script language="javascript">
+var success=0; cRef=""; cRefType=""; cPage="";
+var L10qstr,L10pc,L10ref,L10a,L10pg; L10pg=document.URL.toString(); L10ref=document.referrer;
+if(top.document.location==document.referrer || (document.referrer == "" && top.document.location != "")) {L10ref=top.document.referrer;}
+L10qStr = "pg="+escape(L10pg)+"&ref="+escape(L10ref)+"&os="+escape(navigator.userAgent)+"&nn="+escape(navigator.appName)+"&nv="+escape(navigator.appVersion)+"&nl="+escape(navigator.language)+"&sl="+escape(navigator.systemLanguage)+"&sa="+success+"&cR="+escape(cRef)+"&cRT="+escape(cRefType)+"&cPg="+escape(cPage);
+if(navigator.appVersion.substring(0,1) > "3") { L10d = new Date(); L10qStr = L10qStr+"&cd="+screen.colorDepth+"&sx="+screen.width+"&sy="+screen.height+"&tz="+L10d.getTimezoneOffset();}
+<!-- The L10 Hit Counter logo and links must not be removed or altered -->
+if((location.href.substr(0,6)=="https:") || (location.href.substr(0,6)=="HTTPS:")) { L10pc="https"; } else { L10pc="http"; }
+document.write('<tr><td><a href="http://www.innovationads.com/L10Apps/L10HC_Reporter.html" target=_blank><img border=0 hspace=0 vspace=0 width=0 height=0 src="'+L10pc+'://www.innovationads.com/L10Apps/L10HC_Counter.php?'+L10qStr+'" alt="LevelTen Hit Counter 3.15"></a></td>');
+</script><tbody><tr><td><a href="http://www.innovationads.com/L10Apps/L10HC_Reporter.html" target="_blank"><img border="0" hspace="0" vspace="0" width="0" height="0" src="https://www.innovationads.com/L10Apps/L10HC_Counter.php?pg=https%3A//web.archive.org/web/20041205092002id_/http%253A//www.innovationads.com/privacypolicy.htm&amp;ref=&amp;os=Mozilla/5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;nn=Netscape&amp;nv=5.0%20%28X11%3B%20Linux%20x86_64%29%20AppleWebKit/537.36%20%28KHTML%2C%20like%20Gecko%29%20HeadlessChrome/69.0.3494.0%20Safari/537.36&amp;nl=en-US&amp;sl=undefined&amp;sa=0&amp;cR=&amp;cRT=&amp;cPg=&amp;cd=24&amp;sx=800&amp;sy=600&amp;tz=0" alt="LevelTen Hit Counter 3.15"></a></td>
+<td><a href="http://www.leveltendesign.com/L10Apps/HC/" target="_blank"><img border="0" src="http://www.innovationads.com/L10Apps/L10HC_Img_R.gif" width="0" height="0" alt="LevelTen Hit Counter - Free Web Counters"></a></td></tr><tr><td colspan="2"><a href="http://www.leveltendesign.com" target="_blank"><img border="0" src="http://www.innovationads.com/L10Apps/L10HC_Img_B.gif" width="0" height="0" alt="LevelTen Web Design Company - Website Development, Flash &amp; Graphic Designers"></a></td>
+</tr></tbody></table>
+<!-- end: L10 Hit Counter page code -->
 
 
 </body></html>
