--- a/f/fi/fi./fi.com.html
+++ b/f/fi/fi./fi.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fi.com privacy policy that was archived on 2004-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040606155813id_/http%3A//www.fi.com/us/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fi.com privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205163157id_/http%3A//www.fi.com/us/legal/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <base href="http://www.fi.com/us/legal/privacy/">
@@ -35,6 +35,18 @@ tax deductible investing, tax deductible investments, tax efficient investing, t
     <script language="JavaScript" src="js/dtmlmeth_menu_arrsetuptop" type="text/javascript"></script>
     <script language="JavaScript" src="js/dtmlmeth_menu_arrsetup" type="text/javascript"></script>
     <script language="JavaScript" src="js/dtmlmeth_menucode" type="text/javascript"></script>
+
+    <!-- Begin NetConversions Code -->
+<script language="javascript"> 
+<!-- 
+client='Fisher'
+path=location.protocol=='http:'||location.protocol=='file:'?'http://spd.netconversions.com/':'https://ssl1.speedera.net/anon.netconversions.r3h.net/'
+navU=navigator.userAgent;
+if((navU.indexOf('MSIE 5')!=-1||navU.indexOf('MSIE 6')!=-1)&&navU.toLowerCase().indexOf('mac')==-1&&navU.indexOf('KTXN')==-1)
+  document.write('<'+'script language="javascript" src="'+path+client+'/nc_tuhead.js"><'+'/script>')
+//--> 
+</script>
+<!-- End NetConversions Code -->
 
   </head>
 <body>
@@ -199,94 +211,82 @@ tax deductible investing, tax deductible investments, tax efficient investing, t
             <a name="top">
 <h3 class="bodyMainTitle">Privacy Policy</h3>
 
-<h5 class="bodySubTitle">Last Revised: April 12, 2004</h5>
-<h5 class="bodySubTitle"><i>Our commitment to you:  User data and contact information obtained by Fisher Investments will never be sold to any third party.</i></h5>
+<h5 class="bodySubTitle">Last Revised: October 26, 2004</h5>
+<h5 class="bodySubTitle"><i>Our commitment to you:  User data and contact information obtained by Fisher Investments will never be shared for commercial purposes.</i></h5>
 
 </a><p class="bodyText"><a name="top">If you have any questions concerning Fisher Investment's Privacy Policy, please send us an email to </a><a class="bodyLink" href="mailto:privacy@fi.com">privacy@fi.com</a>. We'll be glad to help!</p>
 
 <h5 class="bodySubTitle">Introduction</h5>
-<p class="bodyText">Fisher Investments, Inc. provides investment management services to over 10,000 high net worth clients worldwide. As a world-class organization, we are committed to providing the highest quality of service to all of our customers.  We also have a responsibility to our customers, the public, and our profession to deliver our services in a professional manner, with uncompromising values and standards. As such, the firm must and will in all respects comply with all relevant Federal and State laws, regulations and requirements.</p>
-<p class="bodyText">Fisher Investments is committed to providing you with a clear explanation of its Privacy Policy. This Privacy Policy covers privacy issues as they relate to US, Canada, and UK online marketing initiatives and www.fi.com, www.fi-canada.com, www.fisherinvestments.co.uk, pcg.fisherinvestments.com, www.fi-inst.com, and all respective subdirectories.</p>
+<p class="bodyText">Fisher Investments, Inc. provides investment management services to prestigious institutions and individuals worldwide. As a world-class organization, we are committed to providing the highest quality of service to all of our customers.  We also have a responsibility to our customers, the public, and our profession to deliver our services in a professional manner, with uncompromising values and standards. As such, the firm must and will in all respects comply with all relevant Federal and State laws, regulations and requirements.</p>
+<p class="bodyText">Fisher Investments is committed to providing you with a clear explanation of its Privacy Policy. This Privacy Policy covers privacy issues as they relate to US, Canada, and UK online marketing initiatives and www.fi.com, www.fi-canada.com, www.fisherinvestments.co.uk, www.fi-inst.com, and all respective subdirectories.</p>
 
 <p class="bodyText"></p>
 
-<h5 class="bodySubTitle">Email</h5>
+<h5 class="bodySubTitle">General</h5>
 
-<p class="bodyText">Fisher Investments always likes to hear from our valued clients 
-  and prospective clients, and we collect the email addresses of users who communicate 
-  with us via email or request information via our website. Fisher Investments 
-  collects email addresses and other data collected online from current and prospective 
-  clients so that we can provide them with the information they've requested, 
-  whether from Fisher Investments or from one of our marketing partners.</p>
-<p class="bodyText">In certain instances, Fisher Investments uses the services of partner companies who may help us reach prospective clients by collecting email addresses. Please note that these addresses come from people who <i>specifically request information on Fisher Investments via clearly labeled online advertising</i>.</p>
-<p class="bodyText">Fisher Investments collects online data from prospective employees 
-  via our website. You can be assured that resumes and personal information submitted 
-  to us will be held confidential and will not be shared with any third parties.</p>
-<p class="bodyText">Fisher Investments also sponsors third party email content. 
+<p class="bodyText">Fisher Investments 
+  collects contact information and other relevant data  from prospective clients so that we can provide them with the information they've requested - either directly from Fisher Investments or through one of our marketing partners.
+   <i>Please note that this information comes from people who specifically request information through Fisher Investments' website or from clearly labeled advertising.</i></p>
+
+<p class="bodyText">Fisher Investments collects contact information and other relevant data from prospective employees 
+  via our website.</p>
+<p class="bodyText">All personal information submitted to us will be held confidential and will not be shared for commercial purposes.</p>  
+  
+<h5 class="bodySubTitle">Email</h5>  
+<p class="bodyText">Fisher Investments sponsors third party email content. 
   In order to receive Fisher Investments' email content through a third party, 
-  you would have had to previously subscribed to a particular service or "opted-in" 
+  an individual would have had to previously subscribed to a particular service or "opted-in" 
   to receive relevant promotional content from advertising partners. As advertisers, 
   we do not gain access to users' contact information—this information is 
-  kept confidential—nor does Fisher Investments supply additional users from 
+  kept confidential by the content owner—nor does Fisher Investments supply additional users from 
   our own internal database. Rather, the respective online publisher distributes 
   content on our behalf.</p>
 <p class="bodyText">If you have received Fisher Investments' email content through 
   a third party, you must unsubscribe or "opt-out" through the respective 
-  publisher. The only way to avoid receiving promotional offers like these in 
-  the future (from Fisher Investments or other companies) is by going directly 
+  publisher. The only way to avoid receiving future promotional offers (from Fisher Investments or other companies) is by going directly 
   to the respective publisher and unsubscribing from their list.</p>
 <p class="bodyText">Fisher Investments does, however, maintain a suppression file 
   of email addresses in compliance with the CAN SPAM Act of 2003 (S.877). This 
   list is updated daily and provided to publishers with instructions to exclude 
-  the respective email addresses from sponsored email campaigns. For instructions 
+  the respective email addresses from Fisher Investments sponsored email campaigns. For instructions 
   on adding your name to Fisher Investments' email suppression file, see the section 
   called "Removal from the Fisher Investments Database."</p>
 <p class="bodyText"></p>
 
 <h5 class="bodySubTitle">Online Advertising</h5>
-<p class="bodyText">Fisher Investments' advertising is in full compliance with 
+<p class="bodyText">Fisher Investments' online advertising is in full compliance with 
   Internet, advertising and finance industry standards and regulations. Our advertising 
   content is integrated and delivered with online publisher's primary content 
-  in a variety of different formats; some ads are embedded in the website (e.g. 
-  banner) while others are delivered by an independent browser window (e.g. pop-up). 
+  in a variety of different formats; some in graphical format (e.g. banner) and others in text format. 
 </p>
-<p class="bodyText">The delivery of our pop-up and pop-under ads (and frequency 
-  thereof) is ultimately controlled by the respective online publisher. Unfortunately, 
-  we are unable to restrict the delivery of our popup advertisements to individual 
-  users. Typically, pop-ups are "frequency capped" so users should only 
-  receive one pop-up ad per site session (based on the respective publisher's 
-  ad serving policy). However, this functionality will NOT work if you have disabled 
-  "cookies" in your browser. If you are experiencing a high volume of 
-  popup ads, then it might be an issue with your Internet browser's ability to 
-  accept "cookies". It is important that you have "cookies" 
-  enabled in your browser settings. </p>
-<p class="bodyText">The information we collect through online advertising is anonymous 
-  and not personally identifiable. It does not contain your name, address, telephone 
-  number, or email address. To best serve users with offers that are of relevance, 
-  Fisher Investments has formed relationships with companies that place ads on 
-  third party publishers' websites. In addition, these companies may track advertising 
-  that are placed within certain email newsletters. As a result of users visiting 
-  its website, ad server companies may collect information about users such as 
-  domain type, IP address, and clickstream data. <i>Please note that this information 
-  is not individually identifiable</i>.</p>
-<p class="bodyText">Fisher Investments uses pixels, or transparent GIF files, 
-  to help manage online advertising. These GIF files are provided by our ad management 
-  partner. These files enable the ad serving system to recognize a unique cookie 
-  on your Web browser, which in turn enables us to learn which advertisements 
-  bring users to our website. The cookie was placed by us, or by another advertiser 
-  who also works with our ad management partner. </p>
-<p class="bodyText">With cookies, the information we collect is anonymous and 
-  not personally identifiable. It does not contain your name, address, telephone 
-  number, or email address.</p>
+<p class="bodyText">The delivery of our online advertisements (and frequency thereof) 
+  is ultimately controlled by the respective online publisher. Unfortunately, 
+  we are unable to suppress or restrict the delivery of our online advertisements 
+  to individual users. Many publishers offer "frequency capping" to 
+  limit the number of advertisements a user will receive on a periodic basis. 
+  However, this functionality will NOT work if you have disabled "cookies" 
+  in your browser. For example, if you are experiencing a high volume of online 
+  advertisements in general (like pop-up ads), then it might be an issue with 
+  your Internet browser's ability to accept "cookies". It is important 
+  that you have "cookies" enabled in your browser settings.</p>
+<p class="bodyText">Fisher Investments collects aggregate performance data on 
+  its online advertising. This information is anonymous and not personally identifiable. 
+  It does not contain your name, address, telephone number, or email address. 
+  In addition, service providers and the media owners themselves may track behavior 
+  of users visiting their web sites, such as domain type, IP address, and clickstream 
+  data. <i>Please note that this information is not individually identifiable</i>.</p>
 
 <h5 class="bodySubTitle">Cookies</h5>
 <p class="bodyText">What is a "cookie"? A cookie is a small data file 
   containing information, such as a link that a user clicked on, which is written 
   to the user's hard drive by a web server and used to track the pages visited. 
-  They do not contain user passwords. The individual information gathered in this 
-  manner is used for internal purposes only, such as customizing content. We also 
-  use the information on an aggregate basis, to track the usage of our website 
-  and to analyze traffic patterns. </p>
+  With cookies, the information is anonymous and not personally identifiable. 
+  It does not contain personal information such as name, address, telephone number, 
+  or email address. It also does not contain user passwords. The individual information 
+  gathered in this manner is used for internal purposes only, such as looking 
+  at unique page views and customizing content. We also use the information on 
+  an aggregate basis, to track the usage of our website and to analyze traffic 
+  patterns. </p>
 <p class="bodyText">You can control your browser's settings regarding cookies 
   by selecting "Internet Options" or "Preferences" in the 
   menu bar of your browser. This will allow you to prevent your browser from accepting 
@@ -297,12 +297,17 @@ tax deductible investing, tax deductible investments, tax efficient investing, t
 
 
 <h5 class="bodySubTitle">Partners</h5>
-<p class="bodyText">Certain partner organizations review aggregate cookie and email data in order to help Fisher Investments get a better understanding of the users visiting its website. <i>These companies do NOT have access to individual user information</i>. The cumulative data they maintain for Fisher Investments is expressly NOT SHARED with other organizations for commercial purposes. User data and contact information obtained by Fisher Investments will never be sold to any third party.</p>
+<p class="bodyText">Certain partner organizations have limited access to online 
+  performance data (e.g. cookie data) in order to help Fisher Investments get 
+  a better understanding of the users visiting its website. The data they maintain for Fisher 
+  Investments helps us optimize the use of our website. 
+  <i>Note: Personal data obtained by Fisher Investments will not be shared for commercial 
+  purposes</i>.</p>
 
 <h5 class="bodySubTitle">General Privacy Notice for Fisher Investments' Clients</h5>
 <p class="bodyText">Fisher Investments collects nonpublic information about users from the following sources:</p>
 <ul>
-  <li>Information received on applications or other forms;</li>
+  <li>Information received on applications or other forms</li>
   <li>Information provided orally</li>
   <li>Information about transactions or online behavior with Fisher Investments 
     or other publishers </li>
@@ -314,9 +319,9 @@ tax deductible investing, tax deductible investments, tax efficient investing, t
 <p class="bodyText">From time to time, Fisher Investments may use data for new, 
   unanticipated uses not previously disclosed in our privacy notice. If its information 
   practices change at some time in the future Fisher Investments will post the 
-  policy changes to its website to notify users of these changes and provide the 
-  ability to "opt-out" or unsubscribe from these new uses. If users are concerned 
-  about how information is used, they should check back to this location periodically.</p>
+  policy changes to its website to notify users of these changes. If users are 
+  concerned about how information is used, they should check back to this location 
+  periodically.</p>
 
 
 <h5 class="bodySubTitle">Updating or Correcting Personal Information</h5>
