--- a/g/gr/gre/greenriver.edu.html
+++ b/g/gr/gre/greenriver.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the greenriver.edu privacy policy that was archived on 2004-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040619233050id_/http%3A//www.greenriver.edu/PrivacyPolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the greenriver.edu privacy policy that was archived on 2004-12-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041205174858id_/http%3A//www.greenriver.edu/PrivacyPolicy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -140,7 +140,7 @@ document.write("<SCRIPT LANGUAGE='JavaScript1.2' SRC='../hierMenus.js' TYPE='tex
     <area alt="Search Green River Web" href="Search/SearchGRCC.asp" shape="rect" coords="609, 41, 703, 67">
     <area alt="Green River Home" href="default.htm" shape="rect" coords="702, 40, 789, 67">
     </map>
-    <img border="0" src="images/SpringHeader.jpg" usemap="#FPMap0_I1" alt="Page Header" width="791" height="87"></p></td>
+    <img border="0" src="images/FallHeader.jpg" usemap="#FPMap0_I1" alt="Page Header" width="791" height="87"></p></td>
   </tr>
   <tr>
     <td height="33" width="132" align="center" bgcolor="#A8D3AC" valign="top"><a href="http://www.greenriver.edu/StudentResources.htm" "javascript:void(0)"="" onmouseover="popUp('elMenu1',event); img_inact('nav01')" onmouseout="popDown('elMenu1'); img_act('nav01')" onclick="return true">
@@ -159,7 +159,7 @@ document.write("<SCRIPT LANGUAGE='JavaScript1.2' SRC='../hierMenus.js' TYPE='tex
   </tr>
 </tbody></table>
 
-<!--webbot bot="Include" i-checksum="64735" endspan --></div>
+<!--webbot bot="Include" i-checksum="60516" endspan --></div>
     </td>
   </tr>
 
@@ -1188,9 +1188,9 @@ document.write("<SCRIPT LANGUAGE='JavaScript1.2' SRC='../hierMenus.js' TYPE='tex
   </tr>
   <tr>
     <td>
-    <img border="0" src="images/SpringFooter.jpg" alt="Page Footer" width="604" height="40"><a href="Contact.htm"><font face="Arial" size="2">Contact</font></a><font face="Arial" size="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    <img border="0" src="images/FallFooter.jpg" alt="Page Footer" width="604" height="40"><a href="Contact.htm"><font face="Arial" size="2">Contact</font></a><font face="Arial" size="2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     <a href="SiteMap.htm">Sitemap</a></font></td>
   </tr>
 </tbody></table>
 
-<!--webbot bot="Include" i-checksum="14026" endspan --></div></body></html>
+<!--webbot bot="Include" i-checksum="10946" endspan --></div></body></html>
